fixed footer spacing and weird 404 re-render

--- a/react-app/src/components/Footer/Footer.module.css
+++ b/react-app/src/components/Footer/Footer.module.css
@@ -1,30 +1,31 @@
 .footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 2rem;
-    display: flex;
-    flex-direction: row;
-    box-sizing: content-box;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
-    background-color: black;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 2rem;
+  display: flex;
+  flex-direction: row;
+  box-sizing: content-box;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  background-color: black;
 }
 
 .footer__item {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 2rem;
-    margin-top: 0;
-    margin-bottom: 0;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 2rem;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.github, .linkedIn {
-    height: 1.25rem;
-    margin-left: 0.55rem;
-    margin-right: 0.55rem;
+.github,
+.linkedIn {
+  height: 1.25rem;
+  margin-left: 0.55rem;
+  margin-right: 0.55rem;
 }
