--- a/react-app/src/components/PostShow/post-show.css
+++ b/react-app/src/components/PostShow/post-show.css
@@ -8,4 +8,5 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 2rem;
 }
